// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getEs6Dependents() - (["source", "opts"]) - ["exports/exportAllFrom.js",{"inDetail":false}] 1`] = `
Map {
  "./exportNamed" => Map {
    "a" => Object {
      "affectedExports": Set {},
      "alias": null,
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["exports/exportAllFrom.js",{"inDetail":true}] 1`] = `
Map {
  "./exportNamed" => Map {
    "a" => Object {
      "affectedExports": Set {},
      "alias": null,
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["exports/exportDefaultAliasFrom.js",{"inDetail":false}] 1`] = `
Map {
  "./exportDefault" => Map {
    "default" => Object {
      "affectedExports": Set {
        "b",
      },
      "alias": "b",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["exports/exportDefaultAliasFrom.js",{"inDetail":true}] 1`] = `
Map {
  "./exportDefault" => Map {
    "default" => Object {
      "affectedExports": Set {
        "b",
      },
      "alias": "b",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["exports/exportNamedFrom.js",{"inDetail":false}] 1`] = `
Map {
  "./exportNamed" => Map {
    "a" => Object {
      "affectedExports": Set {
        "a",
      },
      "alias": "a",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["exports/exportNamedFrom.js",{"inDetail":true}] 1`] = `
Map {
  "./exportNamed" => Map {
    "a" => Object {
      "affectedExports": Set {
        "a",
      },
      "alias": "a",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["exports/noExports.js",{"inDetail":false}] 1`] = `Map {}`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["exports/noExports.js",{"inDetail":true}] 1`] = `Map {}`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["imports/importAlias.js",{"inDetail":false}] 1`] = `
Map {
  "./base" => Map {
    "a" => Object {
      "affectedExports": true,
      "alias": "b",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["imports/importAlias.js",{"inDetail":true}] 1`] = `
Map {
  "./base" => Map {
    "a" => Object {
      "affectedExports": null,
      "alias": "b",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["imports/importAll.js",{"inDetail":false}] 1`] = `
Map {
  "./base" => Map {
    "*" => Object {
      "affectedExports": true,
      "alias": "base",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["imports/importAll.js",{"inDetail":true}] 1`] = `
Map {
  "./base" => Map {
    "*" => Object {
      "affectedExports": null,
      "alias": "base",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["imports/importDefault.js",{"inDetail":false}] 1`] = `
Map {
  "./base" => Map {
    "default" => Object {
      "affectedExports": true,
      "alias": "base",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["imports/importDefault.js",{"inDetail":true}] 1`] = `
Map {
  "./base" => Map {
    "default" => Object {
      "affectedExports": null,
      "alias": "base",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["imports/importNamed.js",{"inDetail":false}] 1`] = `
Map {
  "./base" => Map {
    "a" => Object {
      "affectedExports": true,
      "alias": "a",
    },
  },
}
`;

exports[`getEs6Dependents() - (["source", "opts"]) - ["imports/importNamed.js",{"inDetail":true}] 1`] = `
Map {
  "./base" => Map {
    "a" => Object {
      "affectedExports": null,
      "alias": "a",
    },
  },
}
`;
